# rust

./: .gitignore  Cargo.toml  readme.md
.devcontainer/: devcontainer.json
docs/: cargo.build.md  cargo.crates.md  cargo.dependency.md  cargo.doc.md  cargo.mod-lib.md  cargo.tools.md  cargo.workspace.md  rust.panic.md  rust.resource-refs.md  rust.traits.md  rust.types-numbers.md  rustc.md  vscode.debug.md
ex-apps/cli-greprs/: .gitignore  Cargo.toml  readme.md
ex-apps/util_time/: Cargo.toml  readme.md  util_time.md
ex-apps/util_time/src/: timestamp_converter.rs  timezone_converter.rs
ex-guessing_game/: .gitignore  Cargo.toml
rust-docs/: cargo.crates.md  cargo.install.binaries.md  cargo.md  cargo.run.md  cargo.test.md  print.md  rust.install-update.md  rust.install.md  rust.log.md  rust.settings.md  rust.types-compound.md  rust.types-numbers.md  rust.warning.md  rustc.md  settings.md
src/: lib.rs  lib_simple.rs  lib_sub_mod.rs  lib_types.rs  main.rs
subproject2/: Cargo.toml
tests/: _external_crates_tests.rs  _sample_tests.rs  _simple_mod_test.rs  _simple_test.rs  _t_collections_tests.rs  _t_functions_tests.rs  _t_iterators_tests.rs  _t_lifetimes_tests.rs  _t_ownership_tests.rs  _t_pointers_tests.rs  _t_statement_tests.rs  _t_test_ex_tests.rs  _t_trait_ex_tests.rs  _t_type_names_tests.rs  _t_types_tests.rs  _t_variables_and_statement_tests.rs  _t_variables_tests.rs  functions_tests.rs  lib_tests.rs  lib_trait_samples_test.rs  lib_types_tests.rs  ownership_tests.rs  simple_mod_test.rs  simple_test.rs  statement_tests.rs  types_tests.rs  variables_tests.rs
(+154 files in other folders)
