[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bin1"
path = "src/bin/sub_program.rs"

[lib]
name = "lib_root"
path = "src/lib.rs"
