[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tzc"
path = "src/timezone_converter.rs"

[[bin]]
name = "tsc"
path = "src/timestamp_converter.rs"

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
debug = true

[workspace]